Fix slider flag alignment (right)

--- a/frontend/theme/extras/blocks.less
+++ b/frontend/theme/extras/blocks.less
@@ -1117,7 +1117,7 @@ figcaption {
   display: flex;
 
   &.right {
-    justify-content: right;
+    align-items: end;
   }
 }
 
